--- a/pom.xml
+++ b/pom.xml
@@ -79,11 +79,11 @@
 			<version>5.3.1.RELEASE</version>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>javax.xml.bind</groupId>-->
-<!--			<artifactId>jaxb-api</artifactId>-->
-<!--			<version>2.3.0</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 
 
 	</dependencies>
